[gd_scene load_steps=3 format=3 uid="uid://bqpgm3iufvvhl"]

[ext_resource type="Script" path="res://scenarios/ConnectionScreen/ConnectionScreen.gd" id="1_nowle"]
[ext_resource type="Script" path="res://scenarios/ConnectionScreen/ErrorLabel.gd" id="2_et70o"]

[node name="ConnectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nowle")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.721569, 0.698039, 0.52549, 1)

[node name="MenuItems" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -74.0
offset_right = 110.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="ConnectionLabel" type="Label" parent="MenuItems"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_font_sizes/font_size = 32
text = "Connection"
horizontal_alignment = 1

[node name="ConnectInfo" type="VBoxContainer" parent="MenuItems"]
layout_mode = 2

[node name="IPField" type="LineEdit" parent="MenuItems/ConnectInfo"]
layout_mode = 2
placeholder_text = "IP"
alignment = 1

[node name="ConnectButton" type="Button" parent="MenuItems/ConnectInfo"]
layout_mode = 2
disabled = true
text = "Connect
"

[node name="HostButton" type="Button" parent="MenuItems"]
layout_mode = 2
text = "Host"

[node name="ErrorLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.631373, 0.247059, 0.219608, 1)
text = "THERE WAS AN ERROR"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_et70o")
